cmake_minimum_required(VERSION 3.29.3)

add_executable(edsa_stack_push_pop_static edsa_stack_push_pop.c)
target_link_libraries(edsa_stack_push_pop_static ${CMAKE_PROJECT_NAME}_static)
add_test(NAME edsa_stack_push_pop_static COMMAND edsa_stack_push_pop_static)

add_executable(edsa_stack_push_pop_shared edsa_stack_push_pop.c)
target_link_libraries(edsa_stack_push_pop_shared ${CMAKE_PROJECT_NAME}_shared)
add_test(NAME edsa_stack_push_pop_shared COMMAND edsa_stack_push_pop_shared)


add_executable(edsa_stack_underflow_static edsa_stack_underflow.c)
target_link_libraries(edsa_stack_underflow_static ${CMAKE_PROJECT_NAME}_static)
add_test(NAME edsa_stack_underflow_static COMMAND edsa_stack_underflow_static)

add_executable(edsa_stack_underflow_shared edsa_stack_underflow.c)
target_link_libraries(edsa_stack_underflow_shared ${CMAKE_PROJECT_NAME}_shared)
add_test(NAME edsa_stack_underflow_shared COMMAND edsa_stack_underflow_shared)


add_executable(edsa_stack_overflow_static edsa_stack_overflow.c)
target_link_libraries(edsa_stack_overflow_static ${CMAKE_PROJECT_NAME}_static)
add_test(NAME edsa_stack_overflow_static COMMAND edsa_stack_overflow_static)

add_executable(edsa_stack_overflow_shared edsa_stack_overflow.c)
target_link_libraries(edsa_stack_overflow_shared ${CMAKE_PROJECT_NAME}_shared)
add_test(NAME edsa_stack_overflow_shared COMMAND edsa_stack_overflow_shared)


add_executable(edsa_stack_push_static edsa_stack_push.c)
target_link_libraries(edsa_stack_push_static ${CMAKE_PROJECT_NAME}_static)
add_test(NAME edsa_stack_push_static COMMAND edsa_stack_push_static)

add_executable(edsa_stack_push_shared edsa_stack_push.c)
target_link_libraries(edsa_stack_push_shared ${CMAKE_PROJECT_NAME}_shared)
add_test(NAME edsa_stack_push_shared COMMAND edsa_stack_push_shared)


add_executable(edsa_stack_pop_static edsa_stack_pop.c)
target_link_libraries(edsa_stack_pop_static ${CMAKE_PROJECT_NAME}_static)
add_test(NAME edsa_stack_pop_static COMMAND edsa_stack_pop_static)

add_executable(edsa_stack_pop_shared edsa_stack_pop.c)
target_link_libraries(edsa_stack_pop_shared ${CMAKE_PROJECT_NAME}_shared)
add_test(NAME edsa_stack_pop_shared COMMAND edsa_stack_pop_shared)


add_executable(edsa_stack_basic_func_static edsa_stack_basic_func.c)
target_link_libraries(edsa_stack_basic_func_static ${CMAKE_PROJECT_NAME}_static)
add_test(NAME edsa_stack_basic_func_static COMMAND edsa_stack_basic_func_static)

add_executable(edsa_stack_basic_func_shared edsa_stack_basic_func.c)
target_link_libraries(edsa_stack_basic_func_shared ${CMAKE_PROJECT_NAME}_shared)
add_test(NAME edsa_stack_basic_func_shared COMMAND edsa_stack_basic_func_shared)
